# PipeChecker

./: .gitignore  LICENSE.md  README.md  cli.py  pyproject.toml
save/: connectors.yaml
save/pipelines/: default.yaml  test_pipe.yaml
save/scripts/: test.sh
src/: config.py
src/api/: api.py  security.py  utils.py  web_auth.py
src/api/routers/: connectors.py  jobs.py  pipelines.py  web.py
src/api/templates/: _step_row.html  _target_body.html  base.html  connector_form.html  job.html  pipeline.html  pipeline_form.html
src/api/website/: connector.py  job.py  login.py  pipeline.py  script.py  utils.py  web.py
src/api/website/templates/: _step_row.html  _target_body.html  base.html  connector_form.html  connectors.html  index.html  job.html  login.html  pipeline.html  pipeline_form.html  script_form.html  scripts.html
src/classes/: __init__.py  connectors.py  enums.py  pipeline.py  results.py  runner.py  target.py  utils.py
src/core/: database.py  jobs.py  run.py  storage.py
src/misc/: caddy_parser.py  simple_parsers.py
tests/: conftest.py
tests/api/: test_connectors.py  test_jobs.py  test_pipelines.py
tests/fixtures/: Caddyfile  connector_caddy.yaml  connector_proxmox.yaml  connectors.yaml
tests/fixtures/pipelines/: fk.yaml
