[project]
name = "pipechecker"
version = "0.0.4"
description = "Service to manage devops pipelines"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.43.0",
    "sqlmodel>=0.0.22",
    "watchfiles>=1.1.1",
    "apscheduler>=3.11.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
